# alphagenome-personal-eval

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmark_sets/: README.md
benchmark_sets/lcl/: hg_tissues.json  lcl_1852_peak_ids.tsv
configs/: lcl_inference.yaml  lcl_predixcan.yaml  rosmap_inference.yaml  rosmap_predixcan.yaml
scripts/: cli_utils.py  run_inference.py  run_predixcan.py
scripts/examples/: run_lcl_inference.sh  run_predixcan.sh  run_rosmap_inference.sh
src/alphagenome_eval/: PersonalDataset.py  __init__.py  save_predictions.py
src/alphagenome_eval/utils/: __init__.py  binning.py  borzoi_utils.py  coordinates.py  data.py  genome.py  gpu.py  modeling.py  prediction.py  scoring.py  visualization.py
src/alphagenome_eval/workflows/: __init__.py  atac_predixcan.py  inference.py  predixcan.py  rna_predixcan.py
tests/: test_basic.py
